tests/trybuild/unit-struct.rs
use get::Get;

#[derive(Get)]
struct Cat;

pub fn main() {}
